[package]
name = "bgb-link-fuzzer"
version = "0.1.0"
authors = ["Kai Page <kaibug@gmail.com>"]
edition = "2018"
description = "A program that sends random data to the BGB emulator, designed primarily for use with Pokémon Red and Blue."
readme = "README.md"
repository = "https://github.com/Quantaly/bgb-link-fuzzer"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgb-link = "0.1"
rand = "0.7"
